@@ -22,32 +22,6 @@ write your code, and then upload the changed code <a href="http://sourceforge.ne
 (we prefer the original and changed codes in one zip file).
 Then we will merge them back into the main codebase.</p>
 
-<p>If you do decide to join in, please follow these simple guidelines,
-which will ultimately make all our lives easier:</p>
-
-<ul>
-  <li>Please consider that WinMerge is translated into
-    multiple languages, so it is always better to keep UI changes to a
-    minimum.</li>
-  <li><b>Do not</b> make trivial
-    changes to existing code, such as deleting blanks, consolidating
-    multi-line comments into single line comments, etc. This just adds
-    a bunch of needless differences to the code. Besides, if every
-    developer massaged the code to fit his/her style, it would be a
-    never-ending struggle.</li>
-  <li>Please try to match existing coding style as
-    much as possible. Note that WinMerge 'core' uses tabs, but <code>editor</code>
-    and <code>diffutils</code> code uses spaces for indents.</li>
-  <li>Please make sure to comment your work so we can
-    all understand what you've done.</li>
-  <li>Please don't make changes that don't relate to
-    the task at hand. If you come across other issues while handling a
-    task, please submit them as bugs or patches.</li>
-  <li>Please don't make changes that aren't on the bug or RFE list;
-    if everyone just threw in everything they wanted, the product would
-    become a hodge-podge.</li>
-</ul>
-
 <p>You find more informations about programming WinMerge in the CVS directory
 <a href="http://cvs.sourceforge.net/viewcvs.py/winmerge/WinMerge/Docs/Developers/">Docs/Developers/</a>.</p>
 
